# mcq

./: .gitignore  README.md  index.html  package-lock.json  package.json  render.yaml  vite.config.js
server/: .gitignore  pyproject.toml  tox.ini
server/api/: exceptions.py  urls.py  views.py
server/api/management/commands/: ensure_superuser.py
server/api/tests/: test_auth.py  test_email_config.py  test_health.py  test_resend_backend.py
server/config/: email_backends.py  settings.py  urls.py
server/courses/: admin.py  api_views.py  forms.py  importer.py  models.py  pdf_importer.py  serializers.py  site_urls.py  urls.py  views.py
server/courses/fixtures/: dsc1_demo.json
server/courses/management/commands/: build_dsc1_fixture.py  (+1 more)
server/courses/migrations/: 0001_initial.py  0002_course_share_token.py  0003_pdfimportjob.py  0004_delete_pdfimportjob.py
server/courses/tests/: test_api_read.py  test_course_create.py  test_demo_fixture.py  test_exam_config.py  test_importer.py  test_models.py  test_pdf_import.py  test_prune_command.py  test_validation.py  test_views.py
server/static/css/: app.css
server/static/js/: study.js
server/templates/: _header.html  base.html  landing.html
server/templates/account/: base.html  email.html  login.html  logout.html  password_reset.html  password_reset_from_key.html  signup.html  verification_sent.html
server/templates/courses/: _csv_preview.html  _pdf_job.html  _summary.html  detail.html  exam_settings.html  form.html  import.html  list.html  study.html
server/templates/registration/: login.html  signup.html
(+120 files in other folders)
