[project]
name = "dsc1-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2,<5.3",
    "djangorestframework>=3.15",
    "dj-database-url>=2.2",
    "whitenoise>=6.7",
    "gunicorn>=23.0",
    "psycopg[binary]>=3.2",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "mypy>=1.11", "django-stubs>=5.0", "tox>=4.18", "tox-uv>=1.11"]

[tool.setuptools.packages.find]
include = ["config*", "api*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
